--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,9 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<base target="_blank">
-
+<meta name="twitter:card" content="app" />
+<meta name="twitter:app:name:iphone" content="MoneyTime: WTF" />
+<meta name="twitter:app:id:iphone" content="1671880966" />
 	<title class="pageTitle">{{ site.page_title }}</title>
 	<meta name="description" content="{{ site.app_description }}">
 
